# DX12Engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  TODOs.md  dependencies.lua  premake5.lua
premake/: generate.bat
premake/extensions/: vs_extension.lua
src/: App.cpp  App.h  Buffer.cpp  Buffer.h  Camera.h  CommandListContext.h  DescriptorAllocator.h  DynamicDescriptorHeap.h  Event.h  Events.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  IGame.h  ImGuiManager.cpp  ImGuiManager.h  Image.cpp  Image.h  IndexBuffer.h  Material.cpp  Material.h  RenderUtils.cpp  RenderUtils.h  Resource.h  ResourceStateTracker.h  RootSignature.cpp  RootSignature.h  SceneLoader.cpp  SceneLoader.h  ShaderTypes.h  Texture.cpp  Texture.h  Timer.h  Types.h  UploadBuffer.cpp  UploadBuffer.h  Utils.h  (+4 more)
src/Engine/: .editorconfig  App.cpp  App.h  Application.cpp  Application.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CommandAllocatorPool.cpp  CommandListContext.h  CommandListUtils.cpp  CommandListUtils.h  CommandQueue.cpp  D3D12Extensions.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DirectXExtensions.h  DirectXHashes.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  EngineConfig.h  Event.h  EventTracker.cpp  EventTracker.h  Events.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  GameV2.cpp  GameV2.h  Graphics.cpp  Graphics.h  Hash.h  IGame.cpp  IGame.h  ImGuiManager.cpp  (+45 more)
src/Engine/Graph/: GraphBuilder.cpp  GraphBuilder.h  GraphForwards.h  Node.cpp  Node.h  Resource.cpp  Resource.h
src/Engine/HAL/: CommandQueue.cpp  CommandQueue.h  DescriptorHeap.cpp  DescriptorHeap.h  DirectXExtensions.h  Graphics.cpp  Graphics.h  HALForwards.h  RootSignature.cpp  RootSignature.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCreationInfo.h  SwapChain.cpp  SwapChain.h
src/Engine/IO/: KeyCodes.h  KeyEvent.h  Keyboard.cpp  Keyboard.h
src/Engine/Memory/: Buffer.cpp  Buffer.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorPage.cpp  DescriptorAllocatorPage.h  DescriptorAllocatorPool.cpp  DescriptorAllocatorPool.h  DescriptorHeap.cpp  DescriptorHeap.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  HeapAllocatorPage.cpp  HeapAllocatorPage.h  IndexBuffer.cpp  IndexBuffer.h  IndexPool.cpp  IndexPool.h  MemoryForwards.h  NewDescriptorAllocator.cpp  NewDescriptorAllocator.h  Resource.cpp  Resource.h  ResourceAllocator.cpp  ResourceAllocator.h  ResourceCopyManager.cpp  ResourceCopyManager.h  ResourceFactory.cpp  ResourceFactory.h  ResourceStateTracker.cpp  ResourceStateTracker.h  Texture.cpp  Texture.h  TextureCreationInfo.h  UploadBuffer.cpp  UploadBuffer.h  (+2 more)
src/Engine/Render/: CommandListUtils.cpp  CommandListUtils.h  CommandQueue.cpp  CommandQueue.h  ConstantBufferUploader.h  DirectXHashes.h  FrameResourceProvider.cpp  FrameResourceProvider.h  FrameTransientContext.cpp  FrameTransientContext.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  MeshRenderer.cpp  MeshRenderer.h  PassCommandRecorder.cpp  PassCommandRecorder.h  PassContext.h  PipelineStateProvider.cpp  PipelineStateProvider.h  PipelineStateStream.h  RenderContext.cpp  RenderContext.h  RenderForwards.h  RenderPassBase.h  RenderRequest.cpp  RenderRequest.h  RenderRequestBuilder.cpp  RenderRequestBuilder.h  Renderer.cpp  Renderer.h  RenderingScene.h  ResourcePlanner.cpp  ResourcePlanner.h  ResourceStateTracker.cpp  ResourceStateTracker.h  RootSignature.cpp  RootSignature.h  RootSignatureBuilder.cpp  (+16 more)
src/Engine/Render/Graph/: NodeResource.h  RenderNode.cpp  RenderNode.h  ResourcePlanner.cpp  ResourcePlanner.h
src/Engine/Render/Passes/: BackBufferPass.cpp  BackBufferPass.h  CubePass.cpp  CubePass.h  DepthPass.cpp  DepthPass.h  ForwardPass.cpp  ForwardPass.h  Names.h  ToneMappingPass.cpp  ToneMappingPass.h
src/Engine/Render/RenderPassMediators/: CommandListUtils.cpp  CommandListUtils.h  PassCommandRecorder.cpp  PassCommandRecorder.h  PassContext.h  PassRenderContext.h  RenderPassBase.h  ResourcePlanner.cpp  ResourcePlanner.h
src/Engine/Render/Shaders/: BackBufferPS.hlsl  BaseLayout.hlsl  CubeMap.hlsl  D3DX_DXGIFormatConvert.h  Depth.hlsl  Forward.hlsl  Mesh.hlsl  ScreenVS.hlsl  ShaderTypes.h  TonemappingPS.hlsl  Vertex.hlsl
src/Engine/Render/Systems/: BackBufferPassSystem.cpp  BackBufferPassSystem.h  CubePassSystem.cpp  CubePassSystem.h  DepthPassSystem.cpp  DepthPassSystem.h  ForwardPassSystem.cpp  ForwardPassSystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  RenderCleanupSystem.cpp  RenderCleanupSystem.h  (+6 more)
src/Engine/Scene/: Camera.h  CameraNode.h  CubeMap.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  LightNode.h  Material.cpp  Material.h  Mesh.h  MeshNode.h  MeshResources.h  Node.h  PunctualLight.h  Sampler.h  SamplerDescription.h  SceneForwards.h  SceneLoadingInfo.h  SceneObject.cpp  SceneObject.h  SceneRegistry.cpp  SceneRegistry.h  SceneStorage.cpp  SceneStorage.h  SceneToGPULoader.cpp  SceneToGPULoader.h  SceneToRegistryLoader.cpp  SceneToRegistryLoader.h  Texture.cpp  Texture.h  Vertex.h
src/Engine/UI/: ImGuiEx.h
src/Resources/Shaders/: LightUtils.hlsl  Shader.hlsl  ShaderTypes.h
src/Scene/Bin3D/: Camera.h  DataRegion.h  Forwards.h  ImagePath.h  Material.h  Mesh.h  Meshlet.h  Node.h  PunctualLight.h  Sampler.h  Scene.cpp  Scene.h  SceneStorage.cpp  SceneStorage.h  Vertex.h
src/Scene/Scene/: ArrayIndex.h  Camera.h  DataRegion.h  ImagePath.h  Material.h  Mesh.h  Node.h  PunctualLight.h  Sampler.h  SceneStorage.cpp  SceneStorage.h  Vertex.h
src/SceneConverter/: main.cpp
src/SceneConverter/Importer/: SceneImporter.cpp  SceneImporter.h
src/SceneConverter/Model/: ImageData.cpp  ImageData.h  Node.h  Scene.cpp  Scene.h
src/SceneConverter/Writer/: BinaryWriter.cpp  BinaryWriter.h  ImageProcessor.cpp  ImageProcessor.h
src/premake/Engine/: premake5.lua
src/premake/Libraries/: DirectXMesh.lua  DirectXTex.lua  premake5.lua
src/premake/Scene/: premake5.lua
src/premake/SceneConverter/: premake5.lua
(+107 files in other folders)
